fix: make firststable version

--- a/server/package.json
+++ b/server/package.json
@@ -6,20 +6,20 @@
   "license": "MIT",
   "scripts": {
     "start": "node dist/main.js",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
+    "start:dev": "dotenv -e ../.env -- nest start --watch",
+    "start:debug": "dotenv -e ../.env -- nest start --debug --watch",
     "start:prod": "node dist/main.js",
     "build": "nest build",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,tests}/**/*.ts\"",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:e2e": "jest --config ./src/tests/e2e/jest-e2e.json",
-    "prisma:generate": "prisma generate",
-    "prisma:migrate": "prisma migrate dev",
-    "prisma:studio": "prisma studio"
+    "test": "dotenv -e ../.env -- jest",
+    "test:watch": "dotenv -e ../.env -- jest --watch",
+    "test:cov": "dotenv -e ../.env -- jest --coverage",
+    "test:e2e": "dotenv -e ../.env -- jest --config ./src/tests/e2e/jest-e2e.json",
+    "prisma:generate": "dotenv -e ../.env -- prisma generate",
+    "prisma:migrate": "dotenv -e ../.env -- prisma migrate dev",
+    "prisma:studio": "dotenv -e ../.env -- prisma studio"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -62,6 +62,7 @@
     "dotenv": "^17.2.3",
     "fastify": "^5.6.1",
     "helmet": "^8.1.0",
+    "ioredis": "^5.4.1",
     "keyv": "^5.5.3",
     "nestjs-pino": "^4.4.1",
     "passport": "^0.7.0",
@@ -70,7 +71,6 @@
     "pino": "^9.14.0",
     "pino-pretty": "^13.1.2",
     "prom-client": "^15.1.3",
-    "redis": "^4.7.1",
     "reflect-metadata": "^0.2.2",
     "rimraf": "^6.1.0",
     "rxjs": "^7.8.1",
@@ -91,6 +91,7 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-import": "^2.32.0",
