--- a/observability/prometheus.yml
+++ b/observability/prometheus.yml
@@ -2,6 +2,9 @@ global:
   scrape_interval: 15s
   evaluation_interval: 15s
 
+rule_files:
+  - /etc/prometheus/alerts/health-alerts.yml
+
 scrape_configs:
   - job_name: 'api'
     metrics_path: /metrics
