--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,15 @@
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint \"{src,tests}/**/*.ts\"",
-    "test": "dotenv -e ../.env -- jest",
-    "test:watch": "dotenv -e ../.env -- jest --watch",
-    "test:cov": "dotenv -e ../.env -- jest --coverage",
-    "test:e2e": "dotenv -e ../.env -- jest --config ./src/tests/e2e/jest-e2e.json",
+    "test": "dotenv --quiet -e ../.env -- jest",
+    "test:watch": "dotenv --quiet -e ../.env -- jest --watch",
+    "test:cov": "dotenv --quiet -e ../.env -- jest --coverage",
+    "test:e2e": "dotenv --quiet -e ../.env -- jest --config ./src/tests/e2e/jest-e2e.json",
     "prisma:generate": "dotenv -e ../.env -- prisma generate",
     "prisma:migrate": "dotenv -e ../.env -- prisma migrate dev",
-    "prisma:studio": "dotenv -e ../.env -- prisma studio"
+    "prisma:studio": "dotenv -e ../.env -- prisma studio",
+    "prepare": "husky install",
+    "lint-staged": "lint-staged"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -78,6 +80,7 @@
     "uuid": "^13.0.0"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3.3.1",
     "@nestjs/cli": "^11.0.10",
     "@nestjs/schematics": "^11.0.9",
     "@nestjs/testing": "^11.1.8",
@@ -91,12 +94,16 @@
     "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^8.46.2",
     "@typescript-eslint/parser": "^8.46.2",
+    "cross-env": "^10.1.0",
     "dotenv-cli": "^11.0.0",
     "eslint": "^9.39.0",
     "eslint-config-prettier": "^10.1.8",
+    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-import": "^2.32.0",
     "eslint-plugin-prettier": "^5.5.4",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
+    "lint-staged": "^16.2.6",
     "prettier": "^3.6.2",
     "prisma": "^6.18.0",
     "supertest": "^7.1.4",
@@ -104,6 +111,16 @@
     "ts-loader": "^9.5.1",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.2"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "prettier --write",
+      "cross-env ESLINT_USE_FLAT_CONFIG=false eslint --max-warnings=0 --fix"
+    ],
+    "*.{json,md,yml,yaml}": [
+      "prettier --write"
+    ]
   }
 }
