--- a/server/package.json
+++ b/server/package.json
@@ -32,6 +32,9 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/helmet": "^13.0.2",
     "@fastify/multipart": "^9.3.0",
+    "@fastify/static": "^8.3.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^2.1.0",
     "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.8",
     "@nestjs/config": "^4.0.2",
@@ -41,6 +44,7 @@
     "@nestjs/platform-fastify": "^11.1.8",
     "@nestjs/platform-socket.io": "^11.1.8",
     "@nestjs/schedule": "^6.0.1",
+    "@nestjs/swagger": "^11.2.1",
     "@nestjs/websockets": "^11.1.8",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.207.0",
