add: github action

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ on:
     branches: [ main ]
 
 jobs:
-  build-and-test:
+  lint-test-build:
     runs-on: ubuntu-latest
     services:
       postgres:
@@ -49,14 +49,30 @@ jobs:
         working-directory: server
         run: npm install
 
+      - name: Run lint
+        working-directory: server
+        run: ESLINT_USE_FLAT_CONFIG=false npm run lint
+
+      - name: Type check
+        working-directory: server
+        run: npm run typecheck
+
       - name: Generate Prisma Client
         working-directory: server
         run: npm run prisma:generate
 
+      - name: Apply database schema
+        working-directory: server
+        run: npx prisma migrate deploy
+
       - name: Run unit tests
         working-directory: server
-        run: npm test
+        run: npm test -- --runInBand
 
       - name: Run e2e tests
         working-directory: server
         run: npm run test:e2e
+
+      - name: Build
+        working-directory: server
+        run: npm run build
