fixes: after add ui

--- a/.env.test
+++ b/.env.test
@@ -20,7 +20,7 @@ JWT_REFRESH_TOKEN_SECRET=test-refresh-secret
 JWT_ACCESS_TOKEN_TTL=900s
 JWT_REFRESH_TOKEN_TTL=1d
 
-CORS_ORIGIN=http://localhost:4200
+CORS_ORIGIN=http://localhost:6005
 RATE_LIMIT_TTL=60
 RATE_LIMIT_MAX=50
 
@@ -60,3 +60,7 @@ TEMPO_PORT=6209
 TEMPO_GRPC_PORT=6212
 PROMETHEUS_PORT=6210
 GRAFANA_PORT=6211
+
+NEXT_UI_PORT=6005
+NEXT_PUBLIC_APP_URL=http://localhost:6005
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3100/api
