--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,12 +2,10 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
   pull_request:
-    branches: [ main ]
 
 jobs:
-  lint:
+  server-lint:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -32,9 +30,9 @@ jobs:
         working-directory: server
         run: npm run typecheck
 
-  test:
+  server-test:
     runs-on: ubuntu-latest
-    needs: lint
+    needs: server-lint
     services:
       postgres:
         image: postgres:16-alpine
@@ -52,7 +50,6 @@ jobs:
           - 6202:6379
         options: >-
           --health-cmd "redis-cli ping" --health-interval 10s --health-timeout 5s --health-retries 5
-
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:6201/my_ads?schema=public
       DATABASE_DIRECT_URL: postgresql://postgres:postgres@localhost:6201/my_ads?schema=public
@@ -60,7 +57,6 @@ jobs:
       REDIS_PORT: 6202
       JWT_ACCESS_TOKEN_SECRET: github-access-secret
       JWT_REFRESH_TOKEN_SECRET: github-refresh-secret
-
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -92,9 +88,9 @@ jobs:
         working-directory: server
         run: npm run test:e2e
 
-  build:
+  server-build:
     runs-on: ubuntu-latest
-    needs: test
+    needs: server-test
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -112,4 +108,40 @@ jobs:
 
       - name: Build
         working-directory: server
+        run: npm run build
+
+  ui-build:
+    runs-on: ubuntu-latest
+    env:
+      NEXT_UI_PORT: 6005
+    defaults:
+      run:
+        working-directory: ui
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Use Node.js 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: ui/package-lock.json
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run lint
+        run: npm run lint
+
+      - name: Run unit tests
+        run: npm test -- --run
+
+      - name: Run Playwright tests
+        run: npx playwright install --with-deps && npm run test:e2e -- --reporter=list
+        env:
+          PLAYWRIGHT_BASE_URL: http://localhost:6005
+          NEXT_UI_PORT: 6005
+
+      - name: Build project
         run: npm run build
