--- a/ui/package.json
+++ b/ui/package.json
@@ -7,7 +7,7 @@
     "dev": "node ./scripts/run-next.mjs dev",
     "build": "next build",
     "start": "node ./scripts/run-next.mjs start",
-    "lint": "next lint",
+    "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write \"**/*.{js,ts,tsx,jsx,json,md,css}\"",
     "test": "vitest",
     "test:watch": "vitest --watch",
