add: auth modules

--- a/.env.test
+++ b/.env.test
@@ -23,6 +23,10 @@ JWT_REFRESH_TOKEN_TTL=1d
 CORS_ORIGIN=http://localhost:6005
 RATE_LIMIT_TTL=60
 RATE_LIMIT_MAX=50
+OTP_TTL_SECONDS=300
+OTP_DIGITS=6
+OTP_SENDER_BASE_URL=
+OTP_SENDER_API_KEY=
 
 RABBITMQ_HOST=host.docker.internal
 RABBITMQ_URL=amqp://${RABBITMQ_HOST:-host.docker.internal}:6213
