--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,8 @@
     "prisma:studio": "dotenv -e ../.env -- prisma studio",
     "sync:divar-categories": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/sync-divar-categories.ts",
     "sync:divar-category-filters": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/sync-divar-category-filters.ts",
+    "divar:harvest-posts": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-divar-post-harvest.ts",
+    "divar:fetch-posts": "dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-divar-post-fetch.ts",
     "prepare": "husky install",
     "lint-staged": "lint-staged"
   },
