--- a/server/package.json
+++ b/server/package.json
@@ -74,6 +74,7 @@
     "fastify": "^5.6.1",
     "helmet": "^8.1.0",
     "ioredis": "^5.4.1",
+    "jalaali-js": "^1.2.8",
     "keyv": "^5.5.3",
     "nestjs-pino": "^4.4.1",
     "passport": "^0.7.0",
