--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "start:dev": "dotenv -e ../.env -- nest start --watch",
     "start:debug": "dotenv -e ../.env -- nest start --debug --watch",
     "start:prod": "node dist/main.js",
+    "cron:scheduler": "ENABLE_CRON_JOBS=true dotenv -e ../.env -- ts-node -r tsconfig-paths/register ./src/scripts/run-cron-scheduler.ts",
     "build": "nest build",
     "typecheck": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.ts\"",
