fix: improve husky

--- a/ui/package.json
+++ b/ui/package.json
@@ -9,7 +9,7 @@
     "start": "node ./scripts/run-next.mjs start",
     "lint": "ESLINT_USE_FLAT_CONFIG=false eslint . --ext .js,.jsx,.ts,.tsx",
     "format": "prettier --write \"**/*.{js,ts,tsx,jsx,json,md,css}\"",
-    "test": "vitest --passWithNoTests",
+    "test": "vitest run --passWithNoTests",
     "test:watch": "vitest --watch --passWithNoTests",
     "test:coverage": "vitest run --coverage --passWithNoTests",
     "test:e2e": "playwright test",
