--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,23 +1,37 @@
 {
-  "name": "Pro UI Base",
-  "short_name": "ProUI",
-  "description": "Production-ready Next.js 15 frontend starter for the My Ads platform.",
+  "name": "1000file",
+  "short_name": "1000file",
+  "description": "Manage your My Ads listings anywhere with offline support.",
   "start_url": "/",
+  "scope": "/",
   "display": "standalone",
-  "background_color": "#0f172a",
-  "theme_color": "#2563eb",
-  "lang": "en",
+  "orientation": "portrait",
+  "background_color": "#464646",
+  "theme_color": "#e7e9c4",
+  "lang": "fa",
   "categories": ["business", "productivity"],
   "icons": [
     {
-      "src": "/icons/icon-192x192.png",
+      "src": "/icons/web-app-manifest-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512x512.png",
+      "src": "/icons/web-app-manifest-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "/icons/apple-touch-icon.png",
+      "sizes": "180x180",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/icons/favicon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "any"
     }
   ]
 }
