fix: improve post view detail

--- a/ui/public/manifest.json
+++ b/ui/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "1000file",
-  "short_name": "1000file",
-  "description": "Manage your My Ads listings anywhere with offline support.",
+  "name": "Mahan File",
+  "short_name": "Mahan File",
+  "description": "Manage your Mahan File listings anywhere with offline support.",
   "start_url": "/",
   "scope": "/",
   "display": "standalone",
