--- a/server/package.json
+++ b/server/package.json
@@ -67,6 +67,7 @@
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
+    "archiver": "^7.0.1",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.4",
     "class-transformer": "^0.5.1",
