fix: extra filters

--- a/.env.example
+++ b/.env.example
@@ -58,7 +58,7 @@ OTEL_COLLECTOR_GRPC_PORT=6206
 
 LOG_LEVEL=info
 LOG_PRETTY=true
-
+PRISMA_LOG_QUERIES=true
 LOKI_PORT=6208
 TEMPO_PORT=6209
 TEMPO_GRPC_PORT=6212
