fix: cron job instance in swarm

--- a/.env.prod
+++ b/.env.prod
@@ -59,6 +59,7 @@ UI_IMAGE=ghcr.io/toncloud/mahan-file-ui
 UI_IMAGE_TAG=stable
 API_REPLICAS=2
 UI_REPLICAS=2
+API_CRON_REPLICAS=1
 
 # =======================================
 # Secrets (store in GitHub Actions secrets)
