--- a/docker-compose-prod.yml
+++ b/docker-compose-prod.yml
@@ -91,7 +91,7 @@ services:
       replicas: 1
 
   api:
-    image: "${API_IMAGE:-ghcr.io/toncloud/my-ads-api}:${API_IMAGE_TAG:-latest}"
+    image: "${API_IMAGE:-ghcr.io/radiophp/my-ads-api}:${API_IMAGE_TAG:-latest}"
     environment:
       NODE_ENV: production
       APP_HOST: 0.0.0.0
@@ -108,7 +108,7 @@ services:
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
       JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL:-900s}
       JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL:-7d}
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.toncloud.observer}
+      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.radiophp.observer}
       RATE_LIMIT_TTL: ${RATE_LIMIT_TTL:-60}
       RATE_LIMIT_MAX: ${RATE_LIMIT_MAX:-100}
       OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
@@ -137,8 +137,8 @@ services:
       LOG_PRETTY: ${LOG_PRETTY:-false}
       PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES:-false}
       NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.toncloud.observer}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.toncloud.observer/api}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.radiophp.observer}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.radiophp.observer/api}
     ports:
       - target: ${APP_PORT:-6200}
         published: ${APP_PORT:-6200}
@@ -159,7 +159,7 @@ services:
           - node.role == worker
 
   api-cron:
-    image: "${API_IMAGE:-ghcr.io/toncloud/my-ads-api}:${API_IMAGE_TAG:-latest}"
+    image: "${API_IMAGE:-ghcr.io/radiophp/my-ads-api}:${API_IMAGE_TAG:-latest}"
     command:
       [
         "node",
@@ -182,7 +182,7 @@ services:
       JWT_REFRESH_TOKEN_SECRET: ${JWT_REFRESH_TOKEN_SECRET:?JWT_REFRESH_TOKEN_SECRET not set}
       JWT_ACCESS_TOKEN_TTL: ${JWT_ACCESS_TOKEN_TTL:-900s}
       JWT_REFRESH_TOKEN_TTL: ${JWT_REFRESH_TOKEN_TTL:-7d}
-      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.toncloud.observer}
+      CORS_ORIGIN: ${CORS_ORIGIN:-https://mahan.radiophp.observer}
       RATE_LIMIT_TTL: ${RATE_LIMIT_TTL:-60}
       RATE_LIMIT_MAX: ${RATE_LIMIT_MAX:-100}
       OTP_TTL_SECONDS: ${OTP_TTL_SECONDS:-300}
@@ -211,8 +211,8 @@ services:
       LOG_PRETTY: ${LOG_PRETTY:-false}
       PRISMA_LOG_QUERIES: ${PRISMA_LOG_QUERIES:-false}
       NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.toncloud.observer}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.toncloud.observer/api}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.radiophp.observer}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.radiophp.observer/api}
     depends_on:
       - postgres
       - redis
@@ -228,13 +228,13 @@ services:
           - node.role == worker
 
   ui:
-    image: "${UI_IMAGE:-ghcr.io/toncloud/my-ads-ui}:${UI_IMAGE_TAG:-latest}"
+    image: "${UI_IMAGE:-ghcr.io/radiophp/my-ads-ui}:${UI_IMAGE_TAG:-latest}"
     environment:
       NODE_ENV: production
       NEXT_UI_PORT: ${NEXT_UI_PORT:-6005}
       PORT: ${NEXT_UI_PORT:-6005}
-      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.toncloud.observer}
-      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.toncloud.observer/api}
+      NEXT_PUBLIC_APP_URL: ${NEXT_PUBLIC_APP_URL:-https://mahan.radiophp.observer}
+      NEXT_PUBLIC_API_BASE_URL: ${NEXT_PUBLIC_API_BASE_URL:-https://mahan.radiophp.observer/api}
       NEXT_PUBLIC_ANALYTICS_WRITE_KEY: ${NEXT_PUBLIC_ANALYTICS_WRITE_KEY:-}
     depends_on:
       - api
