fix: deploy self hosted

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -279,15 +279,15 @@ jobs:
             ghcr.io/${{ steps.vars.outputs.owner }}/my-ads-ui:latest
 
   deploy:
-    runs-on: ubuntu-latest
+    runs-on:
+      - self-hosted
+      - linux
+      - x64
     needs: publish-images
     if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     permissions:
       contents: read
     env:
-      DEPLOY_HOST: ${{ vars.DEPLOY_HOST }}
-      DEPLOY_PORT: ${{ vars.DEPLOY_PORT || '22' }}
-      DEPLOY_USER: ${{ vars.DEPLOY_USER }}
       STACK_NAME: ${{ vars.DEPLOY_STACK_NAME || 'my-ads' }}
     steps:
       - name: Checkout
@@ -295,11 +295,7 @@ jobs:
 
       - name: Validate deployment configuration
         env:
-          DEPLOY_HOST: ${{ env.DEPLOY_HOST }}
-          DEPLOY_PORT: ${{ env.DEPLOY_PORT }}
-          DEPLOY_USER: ${{ env.DEPLOY_USER }}
           STACK_NAME: ${{ env.STACK_NAME }}
-          DEPLOY_SSH_KEY: ${{ secrets.DEPLOY_SSH_KEY }}
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
           MINIO_ACCESS_KEY: ${{ secrets.MINIO_ACCESS_KEY }}
@@ -308,7 +304,7 @@ jobs:
           JWT_REFRESH_TOKEN_SECRET: ${{ secrets.JWT_REFRESH_TOKEN_SECRET }}
           RABBITMQ_PASSWORD: ${{ secrets.RABBITMQ_PASSWORD }}
         run: |
-          required_vars=(DEPLOY_HOST DEPLOY_PORT DEPLOY_USER STACK_NAME DEPLOY_SSH_KEY GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD)
+          required_vars=(STACK_NAME GHCR_TOKEN POSTGRES_PASSWORD MINIO_ACCESS_KEY MINIO_SECRET_KEY JWT_ACCESS_TOKEN_SECRET JWT_REFRESH_TOKEN_SECRET RABBITMQ_PASSWORD)
           missing=0
           for name in "${required_vars[@]}"; do
             if [ -z "${!name}" ]; then
@@ -320,25 +316,10 @@ jobs:
             exit 1
           fi
 
-      - name: Configure SSH key
-        run: |
-          install -m 600 -D /dev/null ~/.ssh/id_rsa
-          printf '%s\n' "${{ secrets.DEPLOY_SSH_KEY }}" > ~/.ssh/id_rsa
-
-      - name: Add deployment host fingerprint
-        run: |
-          ssh-keyscan -T 10 -p "${DEPLOY_PORT}" "${DEPLOY_HOST}" >> ~/.ssh/known_hosts || {
-            echo "::error::Unable to fetch SSH host key for ${DEPLOY_HOST}:${DEPLOY_PORT}"
-            exit 1
-          }
-
-      - name: Configure remote Docker host
-        run: echo "DOCKER_HOST=ssh://${DEPLOY_USER}@${DEPLOY_HOST}:${DEPLOY_PORT}" >> "$GITHUB_ENV"
-
       - name: Verify Docker connectivity
         run: docker info
 
-      - name: Log in to GitHub Container Registry (remote)
+      - name: Log in to GitHub Container Registry
         env:
           GHCR_USERNAME: ${{ secrets.GHCR_USERNAME || github.repository_owner }}
           GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
@@ -349,7 +330,7 @@ jobs:
           fi
           echo "$GHCR_TOKEN" | docker login ghcr.io -u "$GHCR_USERNAME" --password-stdin
 
-      - name: Pull latest images on the swarm manager
+      - name: Pull latest images
         run: |
           docker pull ghcr.io/radiophp/my-ads-api:latest
           docker pull ghcr.io/radiophp/my-ads-ui:latest
