--- a/ui/Dockerfile
+++ b/ui/Dockerfile
@@ -22,6 +22,7 @@ ENV NEXT_TELEMETRY_DISABLED=1
 COPY --from=builder /app/public ./public
 COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
+COPY --from=builder /app/scripts ./scripts
 COPY package.json ./package.json
 EXPOSE 6005
 CMD ["npm", "run", "start"]
