--- a/ui/package.json
+++ b/ui/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.0.7",
     "@hookform/resolvers": "^3.9.0",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.3",
     "@radix-ui/react-toast": "^1.1.5",
