fix: some fixes

--- a/.env.prod
+++ b/.env.prod
@@ -56,6 +56,12 @@ NEXT_UI_PORT=6306
 NEXT_PUBLIC_APP_URL=https://mahanmelk.com
 NEXT_PUBLIC_API_BASE_URL=https://mahanmelk.com/api
 
+NOTIFICATION_WINDOW_MINUTES=10
+NOTIFICATION_SCAN_BATCH_SIZE=50
+NOTIFICATION_RETRY_INTERVAL_MS=180000
+NOTIFICATION_MAX_ATTEMPTS=3
+NOTIFICATION_RETENTION_DAYS=3
+
 # Image references are now fixed in docker-compose-prod.yml and always pull latest tags from GHCR.
 # Keep these here only as documentation / future overrides.
 API_IMAGE=ghcr.io/radiophp/my-ads-api
