--- a/.env.example
+++ b/.env.example
@@ -68,3 +68,9 @@ GRAFANA_PORT=6211
 NEXT_UI_PORT=6005
 NEXT_PUBLIC_APP_URL=http://localhost:6005
 NEXT_PUBLIC_API_BASE_URL=http://localhost:6200/api
+
+NOTIFICATION_WINDOW_MINUTES=10
+NOTIFICATION_SCAN_BATCH_SIZE=50
+NOTIFICATION_RETRY_INTERVAL_MS=180000
+NOTIFICATION_MAX_ATTEMPTS=3
+NOTIFICATION_RETENTION_DAYS=3
