--- a/ui/package.json
+++ b/ui/package.json
@@ -40,6 +40,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^4.12.0",
     "react-redux": "^9.1.2",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
