--- a/.env.prod
+++ b/.env.prod
@@ -55,12 +55,16 @@ PRISMA_LOG_QUERIES=false
 NEXT_UI_PORT=6306
 NEXT_PUBLIC_APP_URL=https://mahanmelk.com
 NEXT_PUBLIC_API_BASE_URL=https://mahanmelk.com/api
+NEXT_PUBLIC_VAPID_PUBLIC_KEY=BJPGr5VE7KBZI1r6zo6kQM8LF9MllmtfnyI65mrH9MZ-MmRVvDr-dpgp0T4L7ornd-Trwb2VSi6MQgjrmHI0o2Q
 
 NOTIFICATION_WINDOW_MINUTES=10
 NOTIFICATION_SCAN_BATCH_SIZE=50
 NOTIFICATION_RETRY_INTERVAL_MS=180000
 NOTIFICATION_MAX_ATTEMPTS=3
 NOTIFICATION_RETENTION_DAYS=3
+VAPID_PUBLIC_KEY=BJPGr5VE7KBZI1r6zo6kQM8LF9MllmtfnyI65mrH9MZ-MmRVvDr-dpgp0T4L7ornd-Trwb2VSi6MQgjrmHI0o2Q
+VAPID_PRIVATE_KEY=5cUm6OFWaKk4ITc0UZAb6yp5TgGiondO0CCV-chTWEc
+VAPID_SUBJECT=mailto:admin@example.com
 
 # Image references are now fixed in docker-compose-prod.yml and always pull latest tags from GHCR.
 # Keep these here only as documentation / future overrides.
