--- a/server/package.json
+++ b/server/package.json
@@ -64,6 +64,7 @@
     "@prisma/client": "^6.18.0",
     "@prisma/instrumentation": "^6.18.0",
     "@socket.io/redis-adapter": "^8.3.0",
+    "@types/web-push": "^3.6.4",
     "@willsoto/nestjs-prometheus": "^6.0.2",
     "amqp-connection-manager": "^5.0.0",
     "amqplib": "^0.10.9",
@@ -90,7 +91,8 @@
     "rimraf": "^6.1.0",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.1",
-    "uuid": "^13.0.0"
+    "uuid": "^13.0.0",
+    "web-push": "^3.6.7"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.3.1",
