fix: worker mode

--- a/scripts/fetch_divar_phones_worker.env
+++ b/scripts/fetch_divar_phones_worker.env
@@ -1,5 +1,5 @@
 # Backend base URL (including /api)
-BASE_URL=https://mahan.toncloud.observer/api
+BASE_URL=https://dev.mahanfile.com/api
 
 # Authorization token (if required by backend). Leave blank if not needed.
 # TOKEN=
